Bug 585080 - Clicking on mailto: URI crashes the content process, r=mwu a=blocking-fennec